cmake_minimum_required(VERSION 3.26)
project(Assignment1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Assignment1 Excercise10.cpp
        Lab2Task1.cpp
        Lab2Task2.cpp
        minheap.cpp
        maxheap.cpp
        Assignment2_qn5.cpp
        Assignment2_qn8.cpp
        Lab3Task1.cpp
        Lab3Task2.cpp
        Lab4.cpp
        "Midterm revision.cpp"
)
