cmake_minimum_required(VERSION 3.26)
project(Assignment1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Assignment2.1
        Assignment2Lab.cpp
        Assignment7.cpp
        Labtask10A.cpp
        Labtask10B.cpp
        Labtask10C.cpp
        Lab11task1.cpp
        Lab11task2.cpp
        encode_decode.cpp

)
